[gd_scene load_steps=8 format=2]

[ext_resource path="res://Overlap/PlayerDetection/PlayerDetection.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/theme_font/uni_05_53_8px.fnt" type="BitmapFont" id=2]
[ext_resource path="res://NPC/NPCPack.gd" type="Script" id=3]
[ext_resource path="res://NPC/NPC_GUI/NPC_GUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Emotions/bubble emotes july update.png" type="Texture" id=5]
[ext_resource path="res://OffScreen/QuestOffScreen/QuestOffScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/SFX/SoundBible/Hello-SoundBible.com-218208532.wav" type="AudioStream" id=7]

[node name="NPCPack" type="Node2D"]
z_index = 1
script = ExtResource( 3 )

[node name="PlayerDetection" parent="." instance=ExtResource( 1 )]

[node name="NameLabel" type="Label" parent="."]
margin_right = 128.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 2 )
text = "NAME LABEL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypeLabel" type="Label" parent="."]
margin_right = 128.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 2 )
text = "TYPE LABEL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPC_GUI" parent="." instance=ExtResource( 4 )]

[node name="Emotion" type="Node2D" parent="."]

[node name="CurrentQuest" type="Sprite" parent="Emotion"]
position = Vector2( -24, -8 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 32, 128, 16, 16 )

[node name="WaitingQuest" type="Sprite" parent="Emotion"]
position = Vector2( 0, -8 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 80, 160, 16, 16 )

[node name="SuccessQuest" type="Sprite" parent="Emotion"]
position = Vector2( 24, -8 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 176, 32, 16, 16 )

[node name="OffScreen" type="Node2D" parent="."]
visible = false

[node name="QuestOffScreen" parent="OffScreen" instance=ExtResource( 6 )]

[node name="hello_speak" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
attenuation = 0.0507658
